--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ flutter:
     - assets/images/menu/
     - assets/images/play_ground/
     - assets/images/player/
-    - assets/images/enemies/
+    - assets/images/enemies/rocket/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
