--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flame: ^0.25.0
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
